# cindergrace_toolkit

./: .codacy.yml  .gitignore  README.md  REVIEW.md  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  start.sh
.github/workflows/: test.yml
addons/custom_nodes_manager/: __init__.py  addon.py
addons/git_sync/: __init__.py  addon.py
addons/model_depot/: __init__.py  addon.py
addons/system_info/: __init__.py  addon.py
addons/workflow_manager/: __init__.py  addon.py  url_database.py  workflow_parser.py
config/: config.json  settings.json
config/releases/: full.json  minimal.json  runpod.json
core/: __init__.py  addon_loader.py  base_addon.py  config_manager.py  profile_sync.py  ssl_utils.py  updater.py
data/: custom_nodes.json  workflow_models.json
data/workflows/: gca_florence2_caption.json
profiles/: index.json  svi_wan22_bf16.json
scripts/: sync_nodes.py  sync_workflows.py  tunee_bulk_download.js
tests/: __init__.py  conftest.py  test_app.py
tests/test_addons/: __init__.py  test_model_depot_security.py  test_url_database.py  test_workflow_manager.py  test_workflow_parser.py
tests/test_core/: test_addon_loader.py  test_base_addon.py  test_config_manager.py  test_profile_sync.py  test_ssl_utils.py
