[project]
name = "cindergrace-toolkit"
version = "0.1.0"
description = "Cindergrace Toolkit"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
