[metadata]
name = cindergrace-toolkit
version = 1.0.0
description = Modular Gradio toolkit for ComfyUI
author = Cindergrace Team
license = CC BY-NC 4.0

[options]
python_requires = >=3.10
packages = find:

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[coverage:run]
source = core,addons
branch = True
omit =
    */tests/*
    */__pycache__/*
    */.venv/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
show_missing = True
precision = 2

[coverage:html]
directory = htmlcov

[ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
